--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,16 @@ body{
     font-size: 20px;
     padding: 20px;
 }
+
+.titulo{
+    color: white;
+    text-align: center;
+    padding: 50px;
+}
+
+.perfiles{
+    display: flex;
+    justify-content: center;
+    flex-wrap:wrap;
+    gap: 20px;
+}
