--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,28 @@ body{
 
 .perfiles{
     display: flex;
-    justify-content: center;
     flex-wrap:wrap;
-    gap: 20px;
+    justify-content: center;
+
+}
+
+.perfil{
+    margin: 10px;
+    text-align: center;
+}
+
+.avatar{
+    width: 150px;
+    height: 150px;
+    background-color: #333;
+    margin-bottom: 10px; ;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.avatar img{
+    width: 100%;
+    height: 100%;
+    color: grey;
+    margin-top: 10px;
 }
