--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ a{
 
 .perfil:hover p{
     color: white;
+    font-weight: 600;
 }
 
 .avatar{
@@ -145,4 +146,5 @@ a{
 .perfil p{
     font-size: 1.3rem;
     margin: 10px;
+    transition: color 0.3s ease;
 }
